--- a/practice2.html
+++ b/practice2.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div>
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="practice.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="practice2.html">Audi S4</a></li>
                 <li class="nav-item"><a class="nav-link" href="practice4.html">Audi RS5</a></li>
                 <li class="nav-item"><a class="nav-link" href="practice5.html">Audi SQ5</a></li>
